--- a/styles/home/cabecalho-home.css
+++ b/styles/home/cabecalho-home.css
@@ -1,40 +1,128 @@
 
-.cabecalho-container nav {
+.cabecalho__container nav {
     display: flex;
-    margin: 0px 7rem;
-    justify-content: space-between;
     align-items: center;
     
 }
 
-.cabecalho-div {
+.cabecalho__div {
     display: flex;
     align-items: center;
-    gap: 32px;
-    padding: 32px 0;
-
 }
 
-.cabecalho-input {
-    width: 393px;
-    padding: 8px 16px;
+.input {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
     border-radius: 20px;
     background-color: var(--cinza-claro);
     border: none;
     gap: 8px;
-    color: var(--cinza);
-    font-size: 14px;
-    font-style: var(--raleway);
 }
 
-.botao-login {
+.cabecalho__input {
+    background-color: transparent;
+    width: 340px;
+    border: none;
+    color: var(--cinza);
+    font-size: 14px;
+    font-style: var(--raleway)
+
+}
+
+.cabecalho__input:focus {
+    outline: 0;
+}
+
+.input__bt {
+    background-color: transparent;
+    border: none;
+}
+
+.botao__login {
     font-size: 16px;
     font-weight: 400;
     font-family: var(--raleway);
     border: 1px solid var(--azul);
     color: var(--azul);
     background-color: var(--branco);
-    padding: 16px;
-    width: 182px;
+}
+
+
+@media screen and (min-width: 0) {
+    .cabecalho__container nav {
+        margin: 0;
+        padding: 0.4rem 0;
+        justify-content: space-around;
+        max-width: 100%;
+    }
+
+    .input{
+        display: none;
+    }
+
+    .botao__login {
+        padding: 10px 16px;
+        width: 112px;
+    }
+
+    .cabecalho__titulo {
+        width: 92px;
+    }
+  
+}
+
+@media screen and (min-width: 768px) {
+    .cabecalho__container nav {
+        margin: 0px 7rem;
+        padding: 0;
+        justify-content: space-between;
+    }
+    .cabecalho__div{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 16px;
+        padding: 16px 0;
+    }
+
+    .input {
+        display: flex;
+        width: 233px;
+        padding: 0px 16px;
+    }
+
+    .botao__login {
+        padding: 12px 16px;
+        width: 166px;
+    }
+    .cabecalho__titulo {
+        width: 156px;
+    }
+
+}
+
+@media screen and (min-width: 992px) {
+    .cabecalho__container nav {
+        margin: 0px 7rem;
+        padding: 0;
+    }
+
+    .cabecalho__div{
+        gap: 32px;
+        padding: 32px 0;
+    } 
+
+    .input {
+        width: 333px;
+        padding: 8px 16px;
+    }
+    
+    .botao__login {
+        padding: 16px;
+        width: 182px;
+    }
+
+    .cabecalho__titulo {
+        width: 176px;
+    }
 }
