--- a/styles/home/rodape-home.css
+++ b/styles/home/rodape-home.css
@@ -13,28 +13,31 @@
 }
 
 @media screen and (min-width: 0) {
-.rodape {
-    width: 100%;
-    padding: 2rem 0;
+.rodape{
+     padding: 16px 0;
 }
 .rodape__descricao{
-    font-size: 0.4rem;
+    font-size: 14px;
+    margin: 0.5rem 0;
 }
     
 }
 
 @media screen and (min-width: 768px) {
-.rodape {
-    width: 100%;
-    padding: 2rem 0;
+.rodape{
+    padding: 32px 0;
 }
 .rodape__descricao {
-    font-size: 0.5rem;
+    font-size: 14px;
+    margin: 0 6.5rem;
 }
    
 }
 
 @media screen and (min-width: 992px) {
+.rodape{
+    padding: 32px 0;
+}
 .rodape__descricao{
     font-size: 16px;
     margin: 0 6.5rem;
